added new paragraph

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>my first git repo</h1>
+    <p>we are adding new lines so that we can do a commit</p>
+    
 </body>
 </html>
